Update portfolio template and fix some layout bugs
- Add “tools” to portfolio piece
- Fix HTML and CSS so imagse in gallery layout correctly.

--- a/templates/default_site/styles.group/styles.css
+++ b/templates/default_site/styles.group/styles.css
@@ -400,7 +400,8 @@ img {
   font-weight: bold;
 }
 .panel-cta {
-  box-shadow: 0 0 0 1px #e1e1e1, 0 0 0 3px #fff, 0 0 0 4px #e1e1e1;
+  -webkit-box-shadow: 0 0 0 1px #e1e1e1, 0 0 0 3px #fff, 0 0 0 4px #e1e1e1;
+          box-shadow: 0 0 0 1px #e1e1e1, 0 0 0 3px #fff, 0 0 0 4px #e1e1e1;
   background: #f3f3f3;
   -webkit-border-radius: 0;
   -webkit-background-clip: padding-box;
@@ -658,7 +659,8 @@ article.piece:last-child {
 }
 .entry-content figure img {
   margin: 1em auto 0.25em auto;
-  box-shadow: 2px 2px 10px 0px rgba(102, 102, 102, 0.5);
+  -webkit-box-shadow: 2px 2px 10px 0px rgba(102, 102, 102, 0.5);
+          box-shadow: 2px 2px 10px 0px rgba(102, 102, 102, 0.5);
 }
 .entry-content figure img.noBorder {
   border: none;
@@ -675,7 +677,8 @@ article.piece:last-child {
   max-height: 200px;
   margin-right: 1.5em;
   margin-bottom: 15px;
-  box-shadow: 2px 2px 10px 0px rgba(102, 102, 102, 0.5);
+  -webkit-box-shadow: 2px 2px 10px 0px rgba(102, 102, 102, 0.5);
+          box-shadow: 2px 2px 10px 0px rgba(102, 102, 102, 0.5);
 }
 .entry-content .entry-image {
   margin: 1em auto;
@@ -693,26 +696,20 @@ article.piece:last-child {
 }
 .entry-content .entry-gallery {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  -webkit-align-content: stretch;
-      -ms-flex-line-pack: stretch;
-          align-content: stretch;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
   -webkit-box-align: start;
-  -webkit-align-items: flex-start;
       -ms-flex-align: start;
           align-items: flex-start;
 }
